Refactor SonarLint + funcionalidade de fechamento de conta por cliente (incompleto)